# multi_doc_query

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  app.py  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  health_check.py  models.py
src/generation/: answerer.py  condenser.py
src/ingestion/: chunker.py  ingest.py  loader.py  scanner.py
src/retrieval/: bm25_index.py  embeddings.py  fusion.py  hybrid.py  reranker.py  vector_store.py
tests/: conftest.py  test_answerer.py  test_bm25_index.py  test_chunker.py  test_condenser.py  test_config.py  test_fusion.py  test_health_check.py  test_hybrid.py  test_ingest.py  test_loader.py  test_reranker.py  test_scanner.py  test_tracer.py  test_vector_store.py
tests/fixtures/: sample.docx  sample.md  sample.txt
