[project]
name = "query-doc"
version = "0.1.0"
description = "Local multi-document RAG chatbot using Chainlit and Ollama"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.0",
    "chromadb>=0.6",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
    "docx2txt>=0.8",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
    "ollama>=0.4",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
